--- a/Application/Apps.DarwinMobile.csproj
+++ b/Application/Apps.DarwinMobile.csproj
@@ -103,6 +103,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging">
       <Version>3.1.2</Version>
     </PackageReference>
+    <PackageReference Include="System.IO.Compression">
+      <Version>4.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -436,6 +439,8 @@
     <Compile Include="Backup Scene\SelectPhotosController.Designer.cs">
       <DependentUpon>SelectPhotosController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Backup Scene\PhotoLibraryExporter.cs" />
+    <Compile Include="Backup Scene\SinglePhotoPackage.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Groundwork\Apps.DarwinCore.csproj">
