--- a/Groundwork/Apps.DarwinCore.csproj
+++ b/Groundwork/Apps.DarwinCore.csproj
@@ -51,6 +51,10 @@
     <Compile Include="Prompts.cs" />
     <Compile Include="Notifications.cs" />
     <Compile Include="UserInfoExtensions.cs" />
+    <Compile Include="Models\PLAsset.cs" />
+    <Compile Include="TableNames.cs" />
+    <Compile Include="Models\PLAssetType.cs" />
+    <Compile Include="Models\PLAssetTag.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PersonalCloud.Core\src\Interface\Interface.csproj">
@@ -61,6 +65,17 @@
       <Project>{3ec42fe4-5cbd-44e6-9e33-bb48e823afb5}</Project>
       <Name>PersonalCloud</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="sqlite-net-base">
+      <Version>1.6.292</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
