--- a/Application/Info.plist
+++ b/Application/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>个人云</string>
 	<key>CFBundleVersion</key>
-	<string>54</string>
+	<string>55</string>
 	<key>CFBundleShortVersionString</key>
 	<string>2.1</string>
 	<key>MinimumOSVersion</key>
@@ -63,5 +63,32 @@
 	<true/>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+				<string>public.archive</string>
+			</array>
+			<key>UTTypeIdentifier</key>
+			<string>com.daoyehuo.PhotoLibraryResources</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>plasset</string>
+					<string>plresources</string>
+				</array>
+			</dict>
+			<key>UTTypeDescription</key>
+			<string>相册备份归档</string>
+		</dict>
+	</array>
 </dict>
 </plist>
