--- a/Application/Apps.DarwinMobile.csproj
+++ b/Application/Apps.DarwinMobile.csproj
@@ -52,12 +52,12 @@
         <DefineConstants>DEBUG</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
-        <MtouchArch>ARM64</MtouchArch>
+        <MtouchArch>ARMv7, ARM64</MtouchArch>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
         <CodesignKey>Apple Development: yehuo dao (QBY27565HZ)</CodesignKey>
         <MtouchDebug>true</MtouchDebug>
-        <CodesignProvision>Personal Cloud App Development</CodesignProvision>
         <LangVersion>latest</LangVersion>
+        <CodesignProvision>Personal Cloud App Development</CodesignProvision>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
         <DebugType>none</DebugType>
@@ -66,7 +66,7 @@
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-        <MtouchArch>ARM64</MtouchArch>
+        <MtouchArch>ARMv7, ARM64</MtouchArch>
         <CodesignKey>Apple Distribution: Beijing Daoyehuo Technology Co.Ltd (N747QRT8C4)</CodesignKey>
         <CodesignProvision>Personal Cloud App Distribution</CodesignProvision>
         <LangVersion>latest</LangVersion>
@@ -336,8 +336,24 @@
         <ImageAsset Include="Assets.xcassets\DirectoryBack.imageset\Up%403x.png">
             <Visible>false</Visible>
         </ImageAsset>
-        <ImageAsset Include="Assets.xcassets\NavPhoto.imageset\Contents.json" />
-        <ImageAsset Include="Assets.xcassets\NavPhoto.imageset\Photos.pdf" />
+        <ImageAsset Include="Assets.xcassets\NavPhoto.imageset\Contents.json">
+        <Visible>false</Visible>
+        </ImageAsset>
+        <ImageAsset Include="Assets.xcassets\NavPhoto.imageset\Photos.pdf">
+        <Visible>false</Visible>
+        </ImageAsset>
+        <ImageAsset Include="Assets.xcassets\NewFolder.imageset\Contents.json">
+        <Visible>false</Visible>
+        </ImageAsset>
+        <ImageAsset Include="Assets.xcassets\NewFolder.imageset\New Folder.pdf">
+        <Visible>false</Visible>
+        </ImageAsset>
+        <ImageAsset Include="Assets.xcassets\ImportDocument.imageset\Contents.json">
+        <Visible>false</Visible>
+        </ImageAsset>
+        <ImageAsset Include="Assets.xcassets\ImportDocument.imageset\Tray Arrow-In.pdf">
+        <Visible>false</Visible>
+        </ImageAsset>
     </ItemGroup>
     <ItemGroup />
     <ItemGroup>
@@ -347,14 +363,6 @@
     <ItemGroup>
         <None Include="Info.plist" />
         <None Include="Entitlements.plist" />
-        <None Include="Deprecated\EditPeerController.cs" />
-        <None Include="Deprecated\EditPeerController.Designer.cs">
-            <DependentUpon>EditPeerController.cs</DependentUpon>
-        </None>
-        <None Include="Deprecated\SharedFilesController.cs" />
-        <None Include="Deprecated\SharedFilesController.Designer.cs">
-            <DependentUpon>SharedFilesController.cs</DependentUpon>
-        </None>
         <None Include="Deprecated\AVScannerController.cs" />
         <None Include="Deprecated\AVScannerController.designer.cs">
             <DependentUpon>AVScannerController.cs</DependentUpon>
@@ -475,6 +483,8 @@
     <ItemGroup>
         <Folder Include="Assets.xcassets\NavPhoto.imageset\" />
         <Folder Include="Backup Scene\" />
+        <Folder Include="Assets.xcassets\NewFolder.imageset\" />
+        <Folder Include="Assets.xcassets\ImportDocument.imageset\" />
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
