--- a/Application/Entitlements.plist
+++ b/Application/Entitlements.plist
@@ -8,5 +8,13 @@
 	</array>
 	<key>com.apple.developer.networking.wifi-info</key>
 	<true/>
+	<key>com.apple.developer.icloud-container-identifiers</key>
+	<array>
+		<string>iCloud.com.daoyehuo.Unishare</string>
+	</array>
+	<key>com.apple.developer.icloud-services</key>
+	<array>
+		<string>CloudKit</string>
+	</array>
 </dict>
 </plist>
