--- a/Application/Apps.DarwinMobile.csproj
+++ b/Application/Apps.DarwinMobile.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="4.0" 
+    xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
@@ -366,6 +367,12 @@
         <ImageAsset Include="Assets.xcassets\NewFile.imageset\Upload File.pdf">
             <Visible>false</Visible>
         </ImageAsset>
+        <ImageAsset Include="Assets.xcassets\Help.imageset\Contents.json">
+            <Visible>false</Visible>
+        </ImageAsset>
+        <ImageAsset Include="Assets.xcassets\Help.imageset\Help.pdf">
+            <Visible>false</Visible>
+        </ImageAsset>
     </ItemGroup>
     <ItemGroup />
     <ItemGroup>
@@ -451,21 +458,21 @@
         </Compile>
         <Compile Include="Deprecated\DeviceDirectoryController.cs" />
         <Compile Include="Deprecated\DeviceDirectoryController.Designer.cs">
-          <DependentUpon>DeviceDirectoryController.cs</DependentUpon>
+            <DependentUpon>DeviceDirectoryController.cs</DependentUpon>
         </Compile>
         <Compile Include="PhotoLibraryExporter.cs" />
         <Compile Include="Main Scene\ChooseDeviceController.cs" />
         <Compile Include="Main Scene\ChooseDeviceController.Designer.cs">
-          <DependentUpon>ChooseDeviceController.cs</DependentUpon>
+            <DependentUpon>ChooseDeviceController.cs</DependentUpon>
         </Compile>
         <Compile Include="Main Scene\PhotosBackupController.cs" />
         <Compile Include="Main Scene\PhotosBackupController.Designer.cs">
-          <DependentUpon>PhotosBackupController.cs</DependentUpon>
+            <DependentUpon>PhotosBackupController.cs</DependentUpon>
         </Compile>
         <Compile Include="SinglePhotoPackage.cs" />
         <Compile Include="Main Scene\ViewPhotosController.cs" />
         <Compile Include="Main Scene\ViewPhotosController.Designer.cs">
-          <DependentUpon>ViewPhotosController.cs</DependentUpon>
+            <DependentUpon>ViewPhotosController.cs</DependentUpon>
         </Compile>
         <Compile Include="PathSelectedEventArgs.cs" />
         <Compile Include="CloudExceptions.cs" />
@@ -500,6 +507,7 @@
         <Folder Include="Assets.xcassets\ImportDocument.imageset\" />
         <Folder Include="Assets.xcassets\Home.imageset\" />
         <Folder Include="Assets.xcassets\NewFile.imageset\" />
+        <Folder Include="Assets.xcassets\Help.imageset\" />
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
