--- a/Application/Apps.DarwinMobile.csproj
+++ b/Application/Apps.DarwinMobile.csproj
@@ -506,6 +506,7 @@
           <DependentUpon>WebAppsController.cs</DependentUpon>
         </Compile>
         <Compile Include="GlobalSuppressions.cs" />
+        <Compile Include="TableView Cells\UTI.cs" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Groundwork\Apps.DarwinCore.csproj">
