--- a/Application/Info.plist
+++ b/Application/Info.plist
@@ -11,9 +11,9 @@
 	<key>CFBundleName</key>
 	<string>Unishare</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2</string>
+	<string>2.2.1</string>
 	<key>CFBundleVersion</key>
-	<string>67</string>
+	<string>68</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>CFBundleLocalizations</key>
@@ -74,7 +74,7 @@
 				<string>public.archive</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>Photo Library Backup</string>
+			<string>Photo Backup</string>
 			<key>UTTypeIdentifier</key>
 			<string>com.daoyehuo.PhotoLibraryResources</string>
 			<key>UTTypeTagSpecification</key>
