--- a/Application/Apps.DarwinMobile.csproj
+++ b/Application/Apps.DarwinMobile.csproj
@@ -57,6 +57,7 @@
     <MtouchDebug>true</MtouchDebug>
     <LangVersion>latest</LangVersion>
     <CodesignProvision>Personal Cloud Development</CodesignProvision>
+    <NoWarn>CS1701;CS1702</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -69,6 +70,7 @@
     <CodesignKey>Apple Distribution: Beijing Daoyehuo Technology Co.Ltd (N747QRT8C4)</CodesignKey>
     <CodesignProvision>Personal Cloud Distribution</CodesignProvision>
     <LangVersion>latest</LangVersion>
+    <NoWarn>CS1701;CS1702</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
     <AppExtensionDebugBundleId />
@@ -89,7 +91,7 @@
       <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
-      <Version>3.2.1</Version>
+      <Version>3.2.2</Version>
     </PackageReference>
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3">
       <Version>2.0.3</Version>
@@ -98,7 +100,7 @@
       <Version>1.7.335</Version>
     </PackageReference>
     <PackageReference Include="Humanizer.Core">
-      <Version>2.8.11</Version>
+      <Version>2.8.26</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging">
       <Version>3.1.4</Version>
@@ -107,13 +109,13 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="Sentry">
-      <Version>2.1.1</Version>
+      <Version>2.1.3</Version>
     </PackageReference>
     <PackageReference Include="Sentry.Extensions.Logging">
-      <Version>2.1.1</Version>
+      <Version>2.1.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Crashes">
-      <Version>3.2.1</Version>
+      <Version>3.2.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
       <Version>3.0.0</Version>
@@ -420,6 +422,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="AppleDataStorage.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableView Cells\ToggledEventArgs.cs" />
     <Compile Include="Images.cs" />
     <Compile Include="TableView Cells\BasicCell.cs" />
