--- a/Application/Apps.DarwinMobile.csproj
+++ b/Application/Apps.DarwinMobile.csproj
@@ -91,7 +91,7 @@
       <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
-      <Version>3.2.1</Version>
+      <Version>3.4.0</Version>
     </PackageReference>
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3">
       <Version>2.0.3</Version>
@@ -100,27 +100,36 @@
       <Version>1.7.335</Version>
     </PackageReference>
     <PackageReference Include="Humanizer.Core">
-      <Version>2.8.11</Version>
+      <Version>2.8.26</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging">
-      <Version>3.1.4</Version>
+      <Version>3.1.6</Version>
     </PackageReference>
     <PackageReference Include="System.IO.Compression">
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="Sentry">
-      <Version>2.1.1</Version>
+      <Version>2.1.5</Version>
     </PackageReference>
     <PackageReference Include="Sentry.Extensions.Logging">
-      <Version>2.1.1</Version>
+      <Version>2.1.5</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Crashes">
-      <Version>3.2.1</Version>
+      <Version>3.4.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
-      <Version>3.0.0</Version>
+      <Version>3.3.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Ricardo.MBProgressHUD.iOS">
+      <Version>1.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="VaslD.Xamarin.SPAlert">
+      <Version>2.1.4.2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Swift">
+      <Version>1.0.4</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
