--- a/Application/Apps.DarwinMobile.csproj
+++ b/Application/Apps.DarwinMobile.csproj
@@ -125,11 +125,11 @@
     <PackageReference Include="Ricardo.MBProgressHUD.iOS">
       <Version>1.1.0</Version>
     </PackageReference>
-    <PackageReference Include="VaslD.Xamarin.SPAlert">
-      <Version>2.1.4.2</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Swift">
       <Version>1.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="PCPersonalCloud.SPAlert">
+      <Version>2.1.4.3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
