--- a/Groundwork/Apps.DarwinCore.csproj
+++ b/Groundwork/Apps.DarwinCore.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NSDateExtensions.cs" />
+    <Compile Include="PHAssetExt.cs" />
     <Compile Include="PhotoFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PathHelpers.cs" />
