--- a/Application/Apps.DarwinMobile.csproj
+++ b/Application/Apps.DarwinMobile.csproj
@@ -95,14 +95,19 @@
     <Reference Include="System.Web.Services" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
+      <Version>5.0.3</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
-      <Version>3.4.0</Version>
+      <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3">
-      <Version>2.0.3</Version>
+      <Version>2.0.4</Version>
     </PackageReference>
     <PackageReference Include="sqlite-net-base">
       <Version>1.7.335</Version>
@@ -111,30 +116,25 @@
       <Version>2.8.26</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging">
-      <Version>3.1.7</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.IO.Compression">
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="Sentry">
-      <Version>2.1.5</Version>
+      <Version>3.0.8</Version>
     </PackageReference>
     <PackageReference Include="Sentry.Extensions.Logging">
-      <Version>2.1.5</Version>
+      <Version>3.0.8</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Crashes">
-      <Version>3.4.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
-      <Version>3.3.0</Version>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
+      <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="Ricardo.MBProgressHUD.iOS">
       <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Swift">
-      <Version>1.0.4</Version>
+      <Version>1.0.7</Version>
     </PackageReference>
     <PackageReference Include="PCPersonalCloud.SPAlert">
       <Version>2.1.4.3</Version>
