--- a/Groundwork/Apps.DarwinCore.csproj
+++ b/Groundwork/Apps.DarwinCore.csproj
@@ -67,6 +67,11 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
+      <Version>5.0.3</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="sqlite-net-base">
       <Version>1.7.335</Version>
     </PackageReference>
