--- a/Application/Apps.DarwinMobile.csproj
+++ b/Application/Apps.DarwinMobile.csproj
@@ -137,6 +137,9 @@
     <PackageReference Include="Ricardo.MBProgressHUD.iOS">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.6.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -430,6 +433,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="AppleDataStorage.cs" />
+    <Compile Include="Reachability.cs" />
     <Compile Include="TableView Cells\ToggledEventArgs.cs" />
     <Compile Include="Images.cs" />
     <Compile Include="TableView Cells\BasicCell.cs" />
