--- a/Application/Entitlements.plist
+++ b/Application/Entitlements.plist
@@ -18,5 +18,7 @@
 	</array>
 	<key>com.apple.developer.icloud-container-environment</key>
 	<string>Production</string>
+	<key>com.apple.developer.networking.multicast</key>
+	<true/>
 </dict>
 </plist>
